@@ -1,0 +1,128 @@
+#!/bin/sh
+#
+# Part of MariaDB Enterprise package
+#
+# This file is distributed as part of the SkySQL MariaDB Enterprise package.
+# It is free software: you can redistribute it and/or modify it under
+# the terms of the GNU General Public License as published by the Free Software
+# Foundation, version 2.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+# details.
+#
+# You should have received a copy of the GNU General Public License along with
+# this program; if not, write to the Free Software Foundation, Inc., 51
+# Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+#
+# Copyright 2013 (c) SkySQL Ab
+#
+# Author      : Stefano Simonelli
+# Version     : 2.20
+# Date        : October 2013
+# Description : LSB script for MariaDB Manager Monitor
+# Note        : Script location must be: /etc/init.d  - with execute permission
+# Returns     : 0 = OK - 1 = Warning
+# 
+
+vMonitorDir=/usr/local/skysql/monitor
+
+fGetMonitorPid() {
+    vMonitorPid=`ps -efwwww | grep ClusterMonitor.jar | grep -v grep | awk '{print $2}'`                    
+} 
+
+case "$1" in
+
+    ###################################################################################################################
+    'start') 
+        fGetMonitorPid           
+                
+        if [ "${vMonitorPid}" != "" ]; then
+        
+            echo "`date` - Warning: MariaDB Manager Monitor is already running on `hostname`, process $vMonitorPid"
+            vRetVal=1
+
+        else
+            ### Starting the Monitor ##################################################################################
+            echo "`date` - Start: MariaDB Manager Monitor is starting "
+    
+            PATH=${PATH}:/usr/sbin
+    
+            java -classpath $vMonitorDir/ClusterMonitor.jar com.skysql.monitor.ClusterMonitor -v all &
+
+            ### Check if the process is started ###############################################################
+            sleep 1
+            fGetMonitorPid
+                    
+            if [ "${vMonitorPid}" != "" ]; then
+            
+                vRetVal=0
+            else
+                echo "`date` - Warning: MariaDB Manager Monitor is NOT running on `hostname`"
+                vRetVal=1            
+            fi
+            
+            ###########################################################################################################           
+        fi
+                
+        ;;
+
+    ###################################################################################################################
+    'stop')       
+        fGetMonitorPid
+                
+        if [ "${vMonitorPid}" != "" ]; then
+
+            echo "`date` - Stop: MariaDB Manager Monitor is stopping "
+                        
+            ### Stop the Monitor ######################################################################################
+	    kill -9 $vMonitorPid
+            ###########################################################################################################
+
+            ### Check if the process is already running ###############################################################
+            sleep 1
+            fGetMonitorPid
+            if [ "${vMonitorPid}" != "" ]; then
+            
+                kill -9 $vMonitorPid        
+            fi                     
+            ###########################################################################################################
+            
+            vRetVal=0
+        else
+            echo "`date` - Status: MariaDB Manager Monitor is NOT running on `hostname`"
+            vRetVal=0
+        fi                     
+        ;;
+
+    ###################################################################################################################
+    'reload'|'restart')
+        $0 stop
+        $0 start
+
+        vRetVal=$?
+        ;;
+
+    ###################################################################################################################
+    'status')
+        fGetMonitorPid
+                
+        if [ "${vMonitorPid}" != "" ]; then
+            echo "`date` - Status: MariaDB Manager Monitor is running on `hostname`, process $vMonitorPid"
+            vRetVal=0
+        else
+            echo "`date` - Status: MariaDB Manager Monitor is NOT running on `hostname`"
+            vRetVal=0
+        fi
+        ;;
+    
+    ###################################################################################################################   
+    *)
+        echo "Usage: MariaDB Manager Monitor - $0 {start|stop|restart|reload|status}"
+
+        vRetVal=1
+        ;;
+esac
+
+exit $vRetVal 
